# cd_audio

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
c_src/: CMakeLists.txt  cd.c  cd.h
src/: lib.rs
